# Library-Management-System-React-FastAPI

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml
backend/: Dockerfile  Procfile  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 053e84c4483a_.py
backend/app/: __init__.py  config.py  db.py  schemas.py  utils.py  views.py
frontend/: Dockerfile  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: HomePageTable.tsx  Homepage.tsx  HomepageAppBar.tsx  IssueBooksPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReturnBooksPage.tsx
frontend/src/store/: actionTypes.ts  index.ts
frontend/src/store/actions/: auth.ts
frontend/src/store/reducers/: auth.ts
frontend/src/utils/: PrivateRoute.tsx
nginx/: nginx.conf
