[tool.poetry]
name = "backend"
version = "1.0.0a1"
description = ""
authors = ["Kumar Aditya <59607654+kumaraditya303@users.noreply.github.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
pydantic = {extras = ["email"], version = "^1.8.2"}
ormar = {extras = ["sqlite"], version = "^0.10.11"}
asyncpg = "^0.23.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
alembic = "^1.6.5"
psycopg2-binary = "^2.8.6"
PyJWT = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
